# pycon-it-2025-workshop

./: .gitignore  Dockerfile  Dockerfile.mock_llm_service   Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflow/: lint.yml
app/: chat.py  main.py
app/templates/: chat.html  predict_intensity.html
mock_chat_service/: Dockerfile  mock_chat.py
model_training/: README.md  dataset_carbon_intesity_for_activites.csv  pyproject.toml  train_carbon_intensity_prediction_model.ipynb
