[tool.poetry]
name = "model-training"
version = "0.1.0"
description = "A package to showcase training a model and exporting carbon metrics"
authors = ["jessica.greene <jessica.greene@ecosia.org>"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
codecarbon = "^3.0.2"
datasets = "^3.6.0"
transformers = "^4.52.3"
scikit-learn = "^1.6.1"
huggingface-hub = "^0.32.2"
ipykernel = "^6.29.5"
jupter = "^0.1.0"
jupyter = "^1.1.1"
torch = [
        {platform = "darwin", version = "2.6.0", source = "pypi"},
        {platform = "linux", markers = "sys_platform == 'linux' and platform_machine == 'x86_64'", version = "2.6.0+cpu", source = "pytorch-cpu-src"}
]
accelerate = "^1.7.0"

[[tool.poetry.source]]
name = "pytorch-cpu-src"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
